# clementina-mia

./: .gitignore  CMakeLists.txt  Makefile  README.md  STRUCTURE.md  TESTING.md  build.sh  mia_indexed_interface_reference.md  setup_dev.sh
.kiro/steering/: project-guidelines.md
docs/: bus_timing.md  copy_byte_removal.md  dma_copy_behavior.md  dma_implementation.md  dma_non_blocking.md  kernel_development.md  mia_indexed_interface_reference.md  mia_programming_guide.md  mia_system_integration.md  project_structure.md  set_copy_commands_removal.md
scripts/: generate_kernel_data.cmake
src/: lwipopts.h  main.c  tusb_config.h
src/bus_interface/: README.md  bus_interface.c  bus_interface.h  bus_interface_test.c  bus_interface_test.h  bus_sync.pio  bus_sync_pio.c  bus_sync_pio.h
src/config/: usb_config.h
src/hardware/: gpio_mapping.c  gpio_mapping.h
src/indexed_memory/: indexed_memory.c  indexed_memory.h  indexed_memory_dma.h  (+3 more)
src/irq/: irq.c  (+1 more)
tests/: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  test_runner.c
tests/bus_interface/: test_bus_interface.c  test_bus_interface.h  test_bus_sync_pio_fifo.c  test_bus_sync_pio_fifo.h
tests/indexed_memory/: test_indexed_memory.c  test_indexed_memory.h
tests/irq/: test_irq.c  test_irq.h
tests/mocks/: bus_sync_pio_mock.c  indexed_memory_dma_mock.c  pico_mock.h
tests/mocks/hardware/: gpio.h  irq.h  pio.h  watchdog.h
tests/mocks/pico/: stdlib.h
tests/mocks/pico/util/: queue.h
tests/rom_emulation/: test_rom_emulator.c  test_rom_emulator.h
tests/system/: test_clock_control.c  test_clock_control.h
(+42 files in other folders)
